(a11y): fix collapse-item panel tabbable if its closed

--- a/src/Blocks/collapse-item/style.scss
+++ b/src/Blocks/collapse-item/style.scss
@@ -8,5 +8,9 @@ $block: 'wp-block-yard-collapse-item';
 
 	&__panel {
 		overflow: hidden;
+
+		&.is-collapse-item-closed {
+			display: none;
+		}
 	}
 }
